Improvements to build process